# brief-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  env.example  main.py  pyproject.toml  uv.toml  思考.md
.qoder/repowiki/zh/content/: CLI 命令参考.md  快速开始.md  故障排除.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
docs/: ppt_agent_design.md
scripts/: fetch_sample.py  inspect_html.py  migrate_db.py  test_image_gen.py  test_templates.py
skills/test_gen/: instructions.md  skill.yaml
skills/visual-review/: instructions.md  skill.yaml
src/: __init__.py  config.py
src/agents/: __init__.py  article_parser_langgraph.py  content_planner.py  image_gen_workflow.py  report_workflow.py
src/cli/: __init__.py  __main__.py  image.py  main.py  ppt.py  ppt_converter.py  rss.py
src/llm/: __init__.py  manager.py
src/models/: __init__.py
src/models/audio/: __init__.py  minimax.py
src/models/image/: __init__.py  image_modelscope.py
src/models/image/aliyun/: __init__.py
src/models/llm/: __init__.py  manager.py
src/prompts/: generate_slides_from_script.md
src/render/: __init__.py
src/render/audio/: __init__.py  dashscope.py  generator.py
src/render/image/: image_aliyun.py  image_modelscope.py  oss.py
src/render/llm/: __init__.py  deepseek.py  manager.py  minimax.py
src/render/ppt/: __init__.py  base.py  builder.py  json_to_marp.py  marp_builder.py
src/render/ppt/templates/: corporate.md  dark.md  default.md  gradient.md  minimal.md
src/services/: __init__.py  llm.py  rss.py
src/storage/: __init__.py  db.py  logger.py  vector_store.py
(+55 files in other folders)
